--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>escapeGod</groupId>
+  <groupId>team_vandelay</groupId>
   <artifactId>prj_spring</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>prj_spring</name>
-  <description>spring</description>
+  <description>prj_spring</description>
   <properties>
 	<java-version>1.11</java-version>												<!-- 1.6 : 2022.02.13 -->
 	<org.springframework-version>5.2.18.RELEASE</org.springframework-version>		<!-- 3.1.1 : 2022.02.13 -->
@@ -106,7 +106,57 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-	
+					<!-- mybatis s 2022.02.13 -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.5.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>2.0.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-dbcp2</artifactId>
+		    <version>2.9.0</version>
+		</dependency>
+		<!-- mybatis e 2022.02.13 -->
+		
+		<!-- @Resource in DAO: multi db connection : s 2022.02.13 -->
+		<dependency>
+		    <groupId>javax.annotation</groupId>
+		    <artifactId>javax.annotation-api</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
+		<!-- @Resource in DAO: multi db connection : e 2022.02.13 -->
+		
+		<!-- mysql s 2022.02.25 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.27</version>
+		</dependency>
+		<!-- mysql e 2022.02.25 -->	
+		
+		<!-- mariadb s 2022.02.13 -->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>2.7.4</version>
+		</dependency>
+		<!-- mariadb s 2022.02.13 -->
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -114,6 +164,7 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
     <build>
         <plugins>
