--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,26 @@
 		</dependency>
 		<!-- mybatis e 2022.02.13 -->
 		
+		<!-- for ajax s 2022.03.12 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+		<!-- for ajax s 2022.03.12 -->	
+		
 		<!-- @Resource in DAO: multi db connection : s 2022.02.13 -->
 		<dependency>
 		    <groupId>javax.annotation</groupId>
